run container add  and responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-Challenge-2</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/root.css">
     <script src="https://kit.fontawesome.com/90011b0752.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -84,7 +85,17 @@
                 </div>
             </div>
         </section>
-        
+        <section class="run-container">
+            <div class="run-info">
+                <h2 class="run-title">Run an Extra 
+                    Mile Easily</h2>
+                <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-1">Join Now</button>
+            </div>
+            <div>
+                <img class="run-img" src="./images/run.jpg" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
