--- a/index.html
+++ b/index.html
@@ -96,6 +96,62 @@
                 <img class="run-img" src="./images/run.jpg" alt="">
             </div>
         </section>
+        <section class="bmi-container">
+            <div class="bmi-heding">
+                <h2 class="bmi-title"> BMI Calculator</h2>
+                <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+            </div>
+            <div class="bmi-content">
+                <div class="bmi-chart">
+                    <h2>BMI Calculator Chart </h2>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5-24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0-29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="bmi-calculator">
+                    <h2 class="calculator-title">Calculate your BMI</h2>
+                    <p class="calculator-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    <div class="mesurement">
+                        <input type="text " id="height" placeholder="Height/cm">  
+                        <input type="text" name="" id="weight" placeholder="Weight/kg">
+                        <input type="text" id="age" placeholder="Age"> 
+                        <select name="" id="sex">
+                            <option value="Sex">Sex</option>
+                            <option value="Male">Male</option>
+                            <option value="Male">Female</option>
+                            <option value="Male">Custome</option>
+                        </select> 
+
+                    </div>
+                    <select name="" id="activity">
+                        <option value="selec-activity">Select Your Activity</option>
+                        <option value="selec-activity">Football</option>
+                        <option value="selec-activity">Cricket</option>
+                        <option value="selec-activity">Badminton</option>
+                    </select> 
+                    <button class="btn-1 calculate">Calculate </button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
