trainer section add

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-Challenge-2</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/root.css">
     <script src="https://kit.fontawesome.com/90011b0752.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -96,11 +95,13 @@
                 <img class="run-img" src="./images/run.jpg" alt="">
             </div>
         </section>
-        <section class="bmi-container">
+        <section >
+            <div class="bmi-container">
             <div class="bmi-heding">
                 <h2 class="bmi-title"> BMI Calculator</h2>
                 <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
             </div>
+            <div class="bg-color">
             <div class="bmi-content">
                 <div class="bmi-chart">
                     <h2>BMI Calculator Chart </h2>
@@ -131,6 +132,7 @@
                     <h2 class="calculator-title">Calculate your BMI</h2>
                     <p class="calculator-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
                     <div class="mesurement">
+                       
                         <input type="text " id="height" placeholder="Height/cm">  
                         <input type="text" name="" id="weight" placeholder="Weight/kg">
                         <input type="text" id="age" placeholder="Age"> 
@@ -149,7 +151,60 @@
                         <option value="selec-activity">Badminton</option>
                     </select> 
                     <button class="btn-1 calculate">Calculate </button>
+                
                 </div>
+            </div>
+        </div>
+        </div>
+        </section>
+        <section class="trainer-container">
+            <div class="trainer-title-description">
+                <h2 class="trainer-title">Meet Our Team</h2>
+                <p class="trainer-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="trainer-content">
+                 <div class="img-section">
+                    <img src="./images/trainer1.png" alt="" class="trainer-img hide-img">
+                    <div class="name-position hide-img">
+                        <h5 class="name">Jerome Bell</h5>
+                        <small class="position">Trainer</small>
+                    </div>
+                 </div>
+                 <div class="img-section">
+                    <img src="./images/trainer2.png " alt="" class="trainer-img">
+                    <div class="name-position">
+                        <h5 class="name">Cameron William</h5>
+                        <small class="position">Trainer</small> 
+                    </div>
+                 </div>
+                 <div class="img-section">
+                    <img src="./images/trainer3.png" alt="" class="trainer-img">
+                    <div class="name-position">
+                        <h5 class="name">Darrell Steward</h5>
+                        <small class="position">Trainer</small>
+                    </div>
+                 </div>
+                 <div class="img-section">
+                    <img src="./images/trainer4.png" alt="" class="trainer-img hide-img">
+                    <div class="name-position hide-img">
+                        <h5 class="name">Dianne Russell  </h5>
+                        <small class="position">Trainer</small>
+                    </div>
+                 </div>
+                 <div class="img-section">
+                    <img src="./images/trainer5.png" alt="" class="trainer-img">
+                    <div class="name-position">
+                        <h5 class="name">Cody Fisher</h5>
+                        <small class="position">Trainer</small>
+                    </div>
+                 </div>
+                 <div class="img-section">
+                    <img src="./images/trainer6.png" alt="" class="trainer-img">
+                    <div class="name-position">
+                        <h5 class="name">Theresa Webb</h5>
+                        <small class="position">Trainer</small>
+                    </div>
+                 </div>
             </div>
         </section>
     </main>
