footer section add and responsive

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         <section >
-            <div class="bmi-container">
+        <div class="bmi-container">
             <div class="bmi-heding">
                 <h2 class="bmi-title"> BMI Calculator</h2>
                 <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
@@ -209,7 +209,38 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div class="footer-content">
+                <div class="logo">
+                    <em class="brand">Fitness</em>
+                    <p class="footer-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="contact">
+                    <h4 class="get-started">Get Started </h4>
+                    <ul>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Affiliate Program</a></li>
+                        <li><a href="">About Us</a></li>
+                    </ul> 
+                </div>
+                <div class="contact">
+                    <h4 class="get-started">Get Started </h4>
+                    <ul>
+                        <li><a href="">Fitness</a></li>
+                        <li><a href="">Platform</a></li>
+                        <li><a href="">Workout Libary</a></li>
+                        <li><a href="">App Design</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+            <hr class="hr">
+            </div>
+            <div class="copy">
+                <small>All right reserved @Fitness 2024</small>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
