bmi section again responsive

--- a/index.html
+++ b/index.html
@@ -59,28 +59,31 @@
         <section class="habits-container ">
             <div class="habit-content">
                 <h2 class="habit-title">Change Your Habits</h2>
-                <p class="habit-descriptio ">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                <p class="habit-descriptio ">Bodybuilding workouts offer benefits like increased muscle mass, improved strength, better metabolism, enhanced mental health, stronger bones, better posture, injury prevention, and increased overall physical fitness and endurance..</p>
             </div>
             <div class="habit-img-container">
                 <div class="habit-img-content">
                     <img src="./images/image 3.png" alt="" class="habit-img">
                     <h4 class="habit-img-t">Movement</h4>
-                    <p class="habit-img-d">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-img-d">Movement enhances strength, flexibility, health, injury prevention, and overall fitness.</p>
                 </div>
                 <div class="habit-img-content">
                     <img src="./images/image 2.png" alt="" class="habit-img">
                     <h4 class="habit-img-t">Time</h4>
-                    <p class="habit-img-d">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-img-d">
+                        To perform daily tasks regularly, time is very important.</p>
                 </div>
                 <div class="habit-img-content">
                     <img src="./images/image 4.png" alt="" class="habit-img">
                     <h4 class="habit-img-t">Practice</h4>
-                    <p class="habit-img-d">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-img-d">
+                        Daily practice is crucial for maintaining fitness.</p>
                 </div>
                 <div class="habit-img-content">
                     <img src="./images/image 5.png" alt="" class="habit-img">
                     <h4 class="habit-img-t">Weight Loss</h4>
-                    <p class="habit-img-d">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-img-d">
+                        Weight loss improves health, performance, reduces disease risk, boosts energy, and enhances body composition.</p>
                 </div>
             </div>
         </section>
@@ -88,10 +91,11 @@
             <div class="run-info">
                 <h2 class="run-title">Run an Extra 
                     Mile Easily</h2>
-                <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <p class="run-description">
+                    To run mile after mile easily, gradually increase your distance, ensure proper rest, stay hydrated, follow a balanced diet, and incorporate regular stretching and warm-up exercises into your routine.</p>
                 <button class="btn-1">Join Now</button>
             </div>
-            <div>
+            <div class="run-img-container">
                 <img class="run-img" src="./images/run.jpg" alt="">
             </div>
         </section>
@@ -99,7 +103,8 @@
         <div class="bmi-container">
             <div class="bmi-heding">
                 <h2 class="bmi-title"> BMI Calculator</h2>
-                <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                <p class="bmi-description">
+                    A BMI calculator assesses body weight relative to height, indicating potential health risks and guiding weight management. It's useful for monitoring body composition and setting health goals. </p>
             </div>
             <div class="bg-color">
             <div class="bmi-content">
@@ -130,7 +135,8 @@
                 </div>
                 <div class="bmi-calculator">
                     <h2 class="calculator-title">Calculate your BMI</h2>
-                    <p class="calculator-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    <p class="calculator-description">
+                        First, enter your height, then your weight, followed by your age, then your gender, and finally your activity level to measure your BMI. </p>
                     <div class="mesurement">
                        
                         <input type="text " id="height" placeholder="Height/cm">  
@@ -160,7 +166,8 @@
         <section class="trainer-container">
             <div class="trainer-title-description">
                 <h2 class="trainer-title">Meet Our Team</h2>
-                <p class="trainer-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="trainer-description">
+                    Our team members are all very helpful and will guide you with great care.</p>
             </div>
             <div class="trainer-content">
                  <div class="img-section">
