--- a/index.html
+++ b/index.html
@@ -137,28 +137,31 @@
                     <h2 class="calculator-title">Calculate your BMI</h2>
                     <p class="calculator-description">
                         First, enter your height, then your weight, followed by your age, then your gender, and finally your activity level to measure your BMI. </p>
-                    <div class="mesurement">
-                       
-                        <input type="text " id="height" placeholder="Height/cm">  
-                        <input type="text" name="" id="weight" placeholder="Weight/kg">
-                        <input type="text" id="age" placeholder="Age"> 
-                        <select name="" id="sex">
-                            <option value="Sex">Sex</option>
-                            <option value="Male">Male</option>
-                            <option value="Male">Female</option>
-                            <option value="Male">Custome</option>
-                        </select> 
-
-                    </div>
-                    <select name="" id="activity">
-                        <option value="selec-activity">Select Your Activity</option>
-                        <option value="selec-activity">Football</option>
-                        <option value="selec-activity">Cricket</option>
-                        <option value="selec-activity">Badminton</option>
-                    </select> 
-                    <button class="btn-1 calculate">Calculate </button>
-                
-                </div>
+                        <form action="" >
+                            <div class="measurement">
+                            <input type="text" placeholder="Height/cm" class="input text">
+                            <input type="text" placeholder="Weight/kg" class="input text">
+                            <input type="text" placeholder="Age" class="input text">
+                            <select name="" id="gender" class="input">
+                                <option value="sex">Sex</option>
+                                <option value="Male">Male</option>
+                                <option value="female">Female</option>
+                                <option value="other">Others</option>
+                            </select>
+                        </div>
+                            <select name="" id="activity" class="activity input">
+                                <option value="activity-factor">Select an activity factor
+                                </option>
+                                <option value="cricket">Cricket
+                                </option>
+                                <option value="football">football
+                                </option>
+                                <option value="badminton">badminton
+                                </option>
+                            </select>
+                            <br>
+                            <button class="btn-1">Calculate</button>
+                        </form> 
             </div>
         </div>
         </div>
