mobile device responsive

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <form action="" >
                             <div class="measurement">
                             <input type="text" placeholder="Height/cm" class="input text">
-                            <input type="text" placeholder="Weight/kg" class="input text">
+                            <input type="text" placeholder="Weight/kg" id="weight " class="input text">
                             <input type="text" placeholder="Age" class="input text">
                             <select name="" id="gender" class="input">
                                 <option value="sex">Sex</option>
